First version of the form

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,2 +1,8 @@
-@import './base/settings';
-@import './base/base';
+@import './components/formheader';
+@import './components/formfooter';
+@import './components/form';
+
+
+#body {
+    background-color: gray;
+}
