added passsword bar

--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -118,6 +118,11 @@
     cursor: pointer;
 }
 
+.bar{
+    width: 200px;
+    position: relative;
+    right: -95px;
+}
 
 .button:disabled{
     opacity: .5;
